dist/authentik/Deployment.authentik-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: authentik
  name: authentik-server
  namespace: authentik
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: authentik-server-authentik-server-deployment-c8cc40e6
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: server
        app.kubernetes.io/name: authentik
        cdk8s.io/metadata.addr: authentik-server-authentik-server-deployment-c8cc40e6
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - server
          image: ghcr.io/goauthentik/server:2026.8.0
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /-/health/live/
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
          name: authentik-server
          ports:
            - containerPort: 9000
            - containerPort: 9443
            - containerPort: 9300
              name: metrics
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /-/health/ready/
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            limits:
              cpu: 1200m
              memory: 1024Mi
            requests:
              cpu: 50m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
      dnsPolicy: ClusterFirst
      hostNetwork: false
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      serviceAccountName: authentik
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
