dist/authentik/Deployment.authentik-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: worker
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: authentik
  name: authentik-worker
  namespace: authentik
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: authentik-worker-authentik-worker-deployment-c845a6ad
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: worker
        app.kubernetes.io/name: authentik
        cdk8s.io/metadata.addr: authentik-worker-authentik-worker-deployment-c845a6ad
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - worker
          image: ghcr.io/goauthentik/server:2026.8.0
          imagePullPolicy: Always
          name: authentik-worker
          ports:
            - containerPort: 9000
            - containerPort: 9300
              name: metrics
          resources:
            limits:
              memory: 2048Mi
            requests:
              cpu: 50m
              memory: 1024Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      serviceAccountName: authentik
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
