dist/authentik/Service.authentik-valkey-master.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/name: valkey
  name: authentik-valkey-master
  namespace: authentik
spec:
  ports:
    - name: tcp-valkey
      port: 6379
      targetPort: valkey
  selector:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/name: valkey
  type: ClusterIP
