dist/authentik/Service.authentik-worker.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: worker
    app.kubernetes.io/name: authentik
  name: authentik-worker
  namespace: authentik
spec:
  externalIPs: []
  ports:
    - name: http
      port: 9000
      targetPort: 9000
    - name: metrics
      port: 9300
      targetPort: 9300
  selector:
    cdk8s.io/metadata.addr: authentik-worker-authentik-worker-deployment-c845a6ad
  type: ClusterIP
