dist/authentik/Service.ldap.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cmdcentral.xyz/hostname: ldap.cmdcentral.xyz
    external-dns.kubernetes.io/hostname: ldap.cmdcentral.xyz
    metallb.io/loadBalancerIPs: 10.0.10.82
  labels:
    app: authentik
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/name: authentik
    implementation: kube-vip
  name: ldap
  namespace: authentik
spec:
  ports:
    - name: ldap
      port: 389
      protocol: TCP
      targetPort: 3389
    - name: ldaps
      port: 636
      protocol: TCP
      targetPort: 6636
  selector:
    app.kubernetes.io/managed-by: goauthentik.io
    app.kubernetes.io/name: authentik-outpost-ldap
    goauthentik.io/outpost-name: ldap
    goauthentik.io/outpost-type: ldap
    goauthentik.io/outpost-uuid: e081b496b3354364bb3198f42a8875d0
  type: LoadBalancer
