dist/authentik/Ingress.authentik-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: authentik
  name: authentik-server
  namespace: authentik
spec:
  rules:
    - host: authentik-server.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: authentik-server
                port:
                  number: 9000
            path: /
            pathType: Prefix
    - host: login.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: authentik-server
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - authentik-server.cmdcentral.xyz
        - login.cmdcentral.xyz
      secretName: authentik-server-tls
